--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
         }
 
         async function fetchFolderImages(path) {
-            const response = await fetch(`https://api.github.com/repos/TrainingContentTeam/Lexipol_Assets/contents/${path}`);
+            const encodedPath = encodeURIComponent(path);
+            const response = await fetch(`https://api.github.com/repos/TrainingContentTeam/Lexipol_Assets/contents/${encodedPath}`);
             const data = await response.json();
-            return data.filter(item => item.type === 'file' && /\.(jpg|jpeg|png)$/i.test(item.name)).map(item => ({
+            return data.filter(item => item.type === 'file' && ['jpg', 'jpeg', 'png'].some(ext => item.name.toLowerCase().endsWith('.' + ext))).map(item => ({
                 url: item.download_url,
                 path: item.path,
                 name: item.name,
