--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
                 return;
             }
             const folderImages = allImages.filter(img => img.folder === selectedFolder);
-            const text = folderImages.map(img => `${img.name}: ${img.url}`).join('
-');
+            const text = folderImages.map(img => img.name + ': ' + img.url).join('\n');
             navigator.clipboard.writeText(text).then(() => {
                 alert(`Copied ${folderImages.length} URLs to clipboard.`);
             }).catch(err => {
